12/26/11 add dropper dispensing solution to model
12/26/11 disable dropper when beaker is full (add disabled button to piccolo-phet image suite)
12/26/11 add solvent, drain solution as clock ticks
12/26/11 add clock to model
12/26/11 add solution in beaker
12/26/11 add precipitate on bottom of beaker
12/26/11 add "Saturated!" indicator
12/26/11 add solvent and "fluid" to model, make faucet outputs show fluid
12/26/11 add fluid coming out of faucets
12/22/11 add sim-sharing to evaporation control
12/22/11 add sim-sharing to faucet sliders
12/21/11 #3193, fix "flow rate" issue in FaucetNode. Delete adapter code workaround from beers-law-lab model.
12/21/11 add faucets model and view
12/21/11 add beaker model and view
12/21/11 define font sizes in constants class
12/21/11 add debug node for model properties
12/21/11 refine some controls
12/20/11 grabbed evaporation control from sugar-and-salt-solutions
12/20/11 add "Remove Solute" button
12/20/11 icons for shaker and dropper
12/20/11 add drag constraints for shaker and dropper
12/20/11 add drag constraint to MovableDragHandler
12/20/11 drag handler for shaker and dropper
12/20/11 model elements for shaker and dropper
12/20/11 add some sim-sharing support
12/20/11 add additional strings for 1st tab, for new features that were added
12/20/11 add momentary button to dropper
12/20/11 add dropper with dynamic label (no button yet)
12/20/11 add shaker with dynamic label
12/20/11 workaround for #3190 (combo box popup causes control panel to resize)
12/20/11 add "solute form" to model and control panel
12/20/11 grab solute control from dilutions
12/20/11 specify solutes as in design document
12/20/11 added string resources for 1st tab
12/20/11 added more basic infrastructure
12/20/11 grabbed relevant model code from dilutions
12/19/11 grabbed shaker image from sugar-and-salt-solutions
12/7/11 created project skeleton